# stbipp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: continuous-integration.yml
cmake/: CMakeFunctions.cmake  LibSymbols.h.in  StbippConfig.cmake.in  TestUtils.cmake
example/: main.cpp
src/: Image.cpp  ImageExporter.cpp  ImageFormat.cpp  ImageImporter.cpp  main.cpp
src/stbipp/: Color.hpp  Color.inl  Image.hpp  ImageExporter.hpp  ImageFormat.hpp  ImageImporter.hpp  TypeTraits.hpp
test/: CMakeLists.txt  ImageTest.cpp  main.cpp
